--- a/06_dom/1.html
+++ b/06_dom/1.html
@@ -3,11 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <title>Dom Learning</title>
+    <style>
+        .bg-black{
+            background-color: #212121;
+            color: #fff;
+        }
+    </style>
 </head>
-<body>
+<body class= "bg-black">
     <div class="bg-black">
-        <h1>DOM learning on chai and code</h1>
+        <h1 id="title" class="heading">DOM learning on chai and code <span style="display: none;"> text test</span></h1>
+        <h2> Lorem, ipsum dolor.</h2>
+        <h2> Lorem ipsum dolor sit amet.</h2>
+        <h2> Lorem, ipsum dolor.</h2>
         <p>Lorem ipsum dolor sit amet.</p>
+        <input type="password" name="" id="">
+
+        <ul>
+            <li class="list-item">one</li>
+            <li class="list-item">two</li>
+            <li class="list-item">three</li>
+            <li class="list-item">four</li>
+        </ul>
     </div>
 </body>
 </html>
